<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.freeworldone.honorpay.ui.screens.profile.ProfileViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.screens.profile.ProfileFragment">

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutHonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileData"
                app:pager="@{(vpProfile)}">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_about" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabHonorsReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_honors_received" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabHonorsAwarded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_honors_awarded" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vpProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:items="@{vm.items}" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>